Type (thanks @nunoveloso‎)

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -16,7 +16,7 @@ title: About • LXJS 2014
 			<h2>In a nutshell</h2>
 			<p>LXJS is 2-day not-for-profit bycommunity for-community international conference, held in Lisbon Portugal, about the New Worlds of JavaScript. You can get to know the people behind it on the <a href="team-and-contacts">our team</a> page.</p>
 			<p>The previous first edition was held in 2012. We sold out, had 1k+ people watching the live stream and 34k+ on our <a href="http://www.youtube.com/user/lxjs2012" target="_blank">YouTube channel</a>. You can visit last years website for more info, including speaker list, at <a href="http://2012.lxjs.org/" target="_blank">2012.lxjs.org</a>.</p>
-			<p>A second edition was setup by popular request. In 2013 we once again sold out and had an overwhelming following of our livestream and videos. All the info - includinf photos, videos and speaker list - can be found at <a href="http://2013.lxjs.org/" target="_blank">2013.lxjs.org</a>.</p>
+			<p>A second edition was setup by popular request. In 2013 we once again sold out and had an overwhelming following of our livestream and videos. All the info - including photos, videos and speaker list - can be found at <a href="http://2013.lxjs.org/" target="_blank">2013.lxjs.org</a>.</p>
 			<p>Our speakers specialize in web and they’ve built tools, platforms and products your developers use everyday like Firefox, Node.js, Socket.io, PhoneGap, MongoDB, CouchDB, Voxer, .NET and Azure.</p>
 			<p>We believe this mix of innovation and technologies we already use everyday makes Lisbon JavaScript the conference to go to this year. LXJS is dedicated to building community and spreading knowledge about what is possible with Javascript.</p>
 			<hr />
