CFS and RCFS deadline

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@ title: LXJS 2014
 		<header class="mod-head">
 			<div class="inner">
 				<h1 class="mod-prime-title">Speakers</h1>
-				<!-- <p class="mod-description">Apply or suggest until <strong></strong>.</p> -->
+				<p class="mod-description">Apply or suggest until <strong>April 10<sup>th</sup></strong></p>
 			</div>
 		</header>
 
