Announcing EB date

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@ title: LXJS 2014
 	<div id="highlights">
 		<div class="highlights-body">
 			<div class="highlights-box">		
-				<p class="featured"><strong>More info TBA soon!</strong><br>June in Lisbon brings you guaranteed sun, we're preparing everything else for an amazing third edition. Follow <a href="https://twitter.com/lxjs" target="_blank">@lxjs</a>, check out LXJS <a href="http://2013.lxjs.org">2013</a> and <a href="http://2012.lxjs.org">2012</a>.</p>
+				<p class="featured"><strong>Early Birds coming up!</strong><br>
+					This Sunday 23<sup>rd</sup> at 7pm UCT limited Early Birds go on sale <a href="https://ti.to/lxjs/2014/">over at tito</a>. We're preparing everything else for an amazing third edition, more info soon.</p>
 			</div>
 		</div>
 	</div>
