Early birds sold out

--- a/src/register/index.html
+++ b/src/register/index.html
@@ -38,11 +38,11 @@ title: Register • LXJS 2014
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<p class="note">Coming soon!</p>
+								<p class="note">Sold out!</p>
 							</div>
 						</div>
 						<footer class="ticket-foot">
-							<span class="date">March 23<sup>rd</sup> 7pm UTC</span>
+							<span class="date">March 23<sup>rd</sup></span>
 						</footer>
 					</article>
 				</li>
