--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ title: LXJS 2014
 				<dd class="location">Lisbon, Portugal</dd>
 				<dd class="date">June 27-28, 2014</dd>
 			</dl>
-			<p class="cta-register"><a href="https://ti.to/lxjs/2014/" title="Register your interest" class="cta-bttn alt"><span>Register your interest!</span></a></p>
+			<p class="cta-register"><a href="/register" title="Register your interest" class="cta-bttn alt"><span>Get your ticket!</span></a></p>
 		</div>
 	</header>
 	
@@ -22,8 +22,8 @@ title: LXJS 2014
 	<div id="highlights">
 		<div class="highlights-body">
 			<div class="highlights-box">		
-				<p class="featured"><strong>Early Birds coming up!</strong><br>
-					This Sunday 23<sup>rd</sup> at 7pm UCT limited Early Birds go on sale <a href="https://ti.to/lxjs/2014/">over at tito</a>. We're preparing everything else for an amazing third edition, more info soon.</p>
+				<p class="featured"><strong>Early Birds sold out!</strong><br>
+					They flew in 30 minutes, this summer promises to be hot! Register your interest <a href="https://ti.to/lxjs/2014/">over at tito</a> or subscribe our newsletter to get notified about upcoming ticket sales.</p>
 			</div>
 		</div>
 	</div>
