--- a/src/register/index.html
+++ b/src/register/index.html
@@ -58,23 +58,23 @@ title: Register • LXJS 2014
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<p class="note"></p>
+								<p class="note">Coming soon</p>
 							</div>
 						</div>
 						<footer class="ticket-foot">
-							<span class="date">TBA</span>
+							<span class="date">March 31<sup>st</sup></span>
 						</footer>
 					</article>
 				</li>
 				<li class="ticket-wrapper">
 					<article class="ticket">
 						<header class="ticket-head">
-							<h1 class="ticket-prime-title">Late Bird</h1>
+							<h1 class="ticket-prime-title">Last Minute</h1>
 						</header>
 						<div class="ticket-body">
 							<dl class="ticket-data">
 								<dt>Price</dt>
-								<dd class="number">€300</dd>
+								<dd class="number">€615</dd>
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
