Updated ticket dates

--- a/src/register/index.html
+++ b/src/register/index.html
@@ -62,7 +62,7 @@ title: Register • LXJS 2014
 							</div>
 						</div>
 						<footer class="ticket-foot">
-							<span class="date">March 31<sup>st</sup>, 7pm UTC+1</span>
+							<span class="date">April 6<sup>th</sup>, 7pm UTC+1</span>
 						</footer>
 					</article>
 				</li>
