--- a/src/register/index.html
+++ b/src/register/index.html
@@ -41,9 +41,6 @@ title: Register • LXJS 2014
 								<p class="note">Sold out!</p>
 							</div>
 						</div>
-						<footer class="ticket-foot">
-							<span class="date">March 23<sup>rd</sup></span>
-						</footer>
 					</article>
 				</li>
 				<li class="ticket-wrapper">
@@ -58,11 +55,29 @@ title: Register • LXJS 2014
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a>
+								<p class="note">Sold out!</p>
+							</div>
+						</div>
+					</article>
+				</li>
+				<li class="ticket-wrapper">
+					<article class="ticket">
+						<header class="ticket-head">
+							<h1 class="ticket-prime-title">Late Bird</h1>
+						</header>
+						<div class="ticket-body">
+							<dl class="ticket-data">
+								<dt>Price</dt>
+								<dd class="number">€300</dd>
+								<dd class="subtitle">+ 23% VAT and Fee</dd>
+							</dl>
+							<div class="ticket-body">
+								<p class="note">Coming soon</p>
+								<!-- <a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a> -->
 							</div>
 						</div>
 						<footer class="ticket-foot">
-							<span class="date">April 6<sup>th</sup>, 7pm UTC+1</span>
+							<span class="date">April 20<sup>th</sup>, 5pm UTC+1</span>
 						</footer>
 					</article>
 				</li>
