Late bird sale started

--- a/src/register/index.html
+++ b/src/register/index.html
@@ -72,8 +72,7 @@ title: Register • LXJS 2014
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<p class="note">Coming soon</p>
-								<!-- <a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a> -->
+								<a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a>
 							</div>
 						</div>
 						<footer class="ticket-foot">
