--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@ title: LXJS 2014
 	<div id="highlights">
 		<div class="highlights-body">
 			<div class="highlights-box">		
-				<p class="featured"><strong>Early Birds sold out!</strong><br>
-					They flew in 30 minutes, this summer promises to be hot! Register your interest <a href="https://ti.to/lxjs/2014/">over at tito</a> or subscribe our newsletter to get notified about upcoming ticket sales.</p>
+				<p class="featured"><strong>Regulars sold out!</strong><br>
+					We're now selling Late Birds, grab them while they last <a href="https://ti.to/lxjs/2014/">over at tito</a>.</p>
 			</div>
 		</div>
 	</div>
