Tweets on Homepage

--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,34 @@ title: LXJS 2014
 	</header>
 	
 	<!-- highlights -->
-	<div id="highlights">
+	<!-- <div id="highlights">
 		<div class="highlights-body">
 			<div class="highlights-box">		
 				<p class="featured"><strong>Regulars sold out!</strong><br>
 					We're now selling Late Birds, grab them while they last <a href="https://ti.to/lxjs/2014/">over at tito</a>.</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 	<!--/ highlights -->
+
+
+	
+	<!-- tweets -->
+	<div id="tweets">
+		<ul>
+			<li class="tweet">
+				<blockquote class="twitter-tweet" lang="pt"><p>Hold tight: triple speaker announcement coming up today!</p>&mdash; LXJS (@lxjs) <a href="https://twitter.com/lxjs/statuses/468664016278417408">20 maio 2014</a></blockquote>
+			</li>
+			<li class="tweet">
+				<blockquote class="twitter-tweet" lang="pt"><p>just got visa &amp; will deliver talk and work shop on node-webkit at <a href="https://twitter.com/lxjs">@lxjs</a> June 28-29, Portugal</p>&mdash; Roger Wang (@wwr) <a href="https://twitter.com/wwr/statuses/464191963218989056">7 maio 2014</a></blockquote>
+			</li>
+			<li class="tweet">
+				<blockquote class="twitter-tweet" lang="pt"><p>If you haven&#39;t secured your <a href="https://twitter.com/lxjs">@lxjs</a> tickets, be sure to get one of the late bird tickets! We hear great things for this year <a href="https://twitter.com/search?q=%23lxjs&amp;src=hash">#lxjs</a> <a href="https://twitter.com/search?q=%23javascript&amp;src=hash">#javascript</a></p>&mdash; opoJS (@opojs) <a href="https://twitter.com/opojs/statuses/456408468925059072">16 abril 2014</a></blockquote>
+			</li>
+		</ul>
+	</div>
+	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<!--/ tweets -->
 
 	<!-- sponsors -->
 	<section class="mod" id="sponsors">
