--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,13 @@ title: LXJS 2014
 	<div id="tweets">
 		<ul>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="pt"><p>Hold tight: triple speaker announcement coming up today!</p>&mdash; LXJS (@lxjs) <a href="https://twitter.com/lxjs/statuses/468664016278417408">20 maio 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>Hold tight: triple speaker announcement coming up today!</p>&mdash; LXJS (@lxjs) <a href="https://twitter.com/lxjs/statuses/468664016278417408">20 May 2014</a></blockquote>
 			</li>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="pt"><p>just got visa &amp; will deliver talk and work shop on node-webkit at <a href="https://twitter.com/lxjs">@lxjs</a> June 28-29, Portugal</p>&mdash; Roger Wang (@wwr) <a href="https://twitter.com/wwr/statuses/464191963218989056">7 maio 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>just got visa &amp; will deliver talk and work shop on node-webkit at <a href="https://twitter.com/lxjs">@lxjs</a> June 28-29, Portugal</p>&mdash; Roger Wang (@wwr) <a href="https://twitter.com/wwr/statuses/464191963218989056">7 May 2014</a></blockquote>
 			</li>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="pt"><p>If you haven&#39;t secured your <a href="https://twitter.com/lxjs">@lxjs</a> tickets, be sure to get one of the late bird tickets! We hear great things for this year <a href="https://twitter.com/search?q=%23lxjs&amp;src=hash">#lxjs</a> <a href="https://twitter.com/search?q=%23javascript&amp;src=hash">#javascript</a></p>&mdash; opoJS (@opojs) <a href="https://twitter.com/opojs/statuses/456408468925059072">16 abril 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>If you haven&#39;t secured your <a href="https://twitter.com/lxjs">@lxjs</a> tickets, be sure to get one of the late bird tickets! We hear great things for this year <a href="https://twitter.com/search?q=%23lxjs&amp;src=hash">#lxjs</a> <a href="https://twitter.com/search?q=%23javascript&amp;src=hash">#javascript</a></p>&mdash; opoJS (@opojs) <a href="https://twitter.com/opojs/statuses/456408468925059072">16 April 2014</a></blockquote>
 			</li>
 		</ul>
 	</div>
