--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@ title: LXJS 2014
 	<div id="tweets">
 		<ul>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p>Hold tight: triple speaker announcement coming up today!</p>&mdash; LXJS (@lxjs) <a href="https://twitter.com/lxjs/statuses/468664016278417408">20 May 2014</a></blockquote>
+				<blockquote class="twitter-tweet" data-cards="hidden" lang="pt"><p>What to expect from in this Summer <a href="https://twitter.com/search?q=%23LXJS&amp;src=hash">#LXJS</a>&#10;<a href="http://t.co/8OIoeDrcYg">http://t.co/8OIoeDrcYg</a></p>&mdash; LXJS (@lxjs) <a href="https://twitter.com/lxjs/statuses/469178573501513728">21 maio 2014</a></blockquote>
 			</li>
 			<li class="tweet">
 				<blockquote class="twitter-tweet" lang="en"><p>just got visa &amp; will deliver talk and work shop on node-webkit at <a href="https://twitter.com/lxjs">@lxjs</a> June 28-29, Portugal</p>&mdash; Roger Wang (@wwr) <a href="https://twitter.com/wwr/statuses/464191963218989056">7 May 2014</a></blockquote>
