ACA Video, Ben Acker

--- a/src/index.html
+++ b/src/index.html
@@ -78,19 +78,27 @@ title: LXJS 2014
 					{% endfor %}
 				</ul>
 			</section>
-			<section class="official-hotel clearfix">
-				<h1>Official Hotel</h1>
-				<ul class="logo-list sponsors">
-					<li class="logo-wrapper">
-						<a target="_blank" href="http://hotel-florida.pt" title="Visit Hotel Florida website"><img src="img/logo-sponsor-hotel-florida.png" alt="Hotel Florida" width="270" height="150" /></a>
-					</li>
-				</ul>
-			</section>
 			<section class="co-organizer clearfix">
 				<h1>Co-Organizer</h1>
 				<ul class="logo-list sponsors">
 					<li class="logo-wrapper">
 						<a target="_blank" href="http://quodis.com" title="Visit Quodis website"><img src="img/logo-sponsor-quodis.png" alt="Quodis" width="270" height="150" /></a>
+					</li>
+				</ul>
+			</section>
+			<section class="video clearfix">
+				<h1>Video Partner</h1>
+				<ul class="logo-list sponsors">
+					<li class="logo-wrapper">
+						<a target="_blank" href="http://acavideo.com/" title="Visit ACA Video website"><img src="img/logo-sponsor-acavideo.png" alt="ACA Video" width="270" height="150" /></a>
+					</li>
+				</ul>
+			</section>
+			<section class="official-hotel clearfix">
+				<h1>Official Hotel</h1>
+				<ul class="logo-list sponsors">
+					<li class="logo-wrapper">
+						<a target="_blank" href="http://hotel-florida.pt" title="Visit Hotel Florida website"><img src="img/logo-sponsor-hotel-florida.png" alt="Hotel Florida" width="270" height="150" /></a>
 					</li>
 				</ul>
 			</section>
