New tweet on home

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@ title: LXJS 2014
 				<blockquote class="twitter-tweet" lang="en"><p>just got visa &amp; will deliver talk and work shop on node-webkit at <a href="https://twitter.com/lxjs">@lxjs</a> June 28-29, Portugal</p>&mdash; Roger Wang (@wwr) <a href="https://twitter.com/wwr/statuses/464191963218989056">7 May 2014</a></blockquote>
 			</li>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p>If you haven&#39;t secured your <a href="https://twitter.com/lxjs">@lxjs</a> tickets, be sure to get one of the late bird tickets! We hear great things for this year <a href="https://twitter.com/search?q=%23lxjs&amp;src=hash">#lxjs</a> <a href="https://twitter.com/search?q=%23javascript&amp;src=hash">#javascript</a></p>&mdash; opoJS (@opojs) <a href="https://twitter.com/opojs/statuses/456408468925059072">16 April 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/lxjs">@lxjs</a> 2012 changed my life for the better. I&#39;m even more bullish on 2014. Are you attending?</p>&mdash; Charlie Robbins (@indexzero) <a href="https://twitter.com/indexzero/statuses/474788774287646721">6 June 2014</a></blockquote>
 			</li>
 		</ul>
 	</div>
