Added oreilly, weareone

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,26 @@ title: LXJS 2014
 					{% endfor %}
 				</ul>
 			</section>
+			<section class="promise clearfix">
+				<h1>Promise</h1>
+				<ul class="logo-list sponsors">
+					{% for sponsor in site.sponsors.promise %}
+						<li class="logo-wrapper">
+							<a target="_blank" href="{{ sponsor.url }}" title="Visit {{ sponsor.name }}"><img src="img/{{ sponsor.logo }}" alt="{{ sponsor.name }}" width="270" height="150" /></a>
+						</li>
+					{% endfor %}
+				</ul>
+			</section>
+			<section class="thankyou clearfix">
+				<h1>Thank you</h1>
+				<ul class="logo-list sponsors">
+					{% for sponsor in site.sponsors.thankyou %}
+						<li class="logo-wrapper">
+							<a target="_blank" href="{{ sponsor.url }}" title="Visit {{ sponsor.name }}"><img src="img/{{ sponsor.logo }}" alt="{{ sponsor.name }}" width="270" height="150" /></a>
+						</li>
+					{% endfor %}
+				</ul>
+			</section>
 			<section class="co-organizer clearfix">
 				<h1>Co-Organizer</h1>
 				<ul class="logo-list sponsors">
