--- a/src/speakers/index.html
+++ b/src/speakers/index.html
@@ -7,8 +7,8 @@ title: Speakers • LXJS 2014
 			
 	<header class="mod-head">
 		<div class="inner">
-			<h1 class="mod-prime-title">Speakers</h1>
-			<p class="mod-description">The list so far. It's growing, we're announcing one at a time!</p>
+			<h1 class="mod-prime-title">Speakers and Trainers</h1>
+			<p class="mod-description">Some will speak, others will give trainings, and some will do both. The list so far. It's growing, we're announcing one at a time!</p>
 		</div>
 	</header>
 	
