Fringe cross-selling on schedule page

--- a/src/schedule/index.html
+++ b/src/schedule/index.html
@@ -20,6 +20,7 @@ title: Schedule • LXJS 2014
 				<h1 class="mod-prime-title">Coming Soon</h1>
 				<p class="mod-description">Detailed schedule will be unveiled closer to the event!</p>
 				<p class="mod-description">On both days the mornings will be reserverd for single-track talks, afternoons for trainings, and evenings for hangouts. You can read more about what to expect on our blog <a href="http://lxjs.tumblr.com/post/82088696801/this-year-we-are-introducing-some-changes-to-the">here</a> and <a href="http://lxjs.tumblr.com/post/86343284703/lifting-off-the-curtain-what-to-expect-in-this-summer">here</a>.</p>
+				<p class="mod-description">Be sure to also check out the info about the parties and surrounding events on <a href="../fringe/">our Fringe page</a>.</p>
 			</div>
 		</header>
 		
