--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@ title: LXJS 2014
 				<dd class="location">Lisbon, Portugal</dd>
 				<dd class="date">June 27-28, 2014</dd>
 			</dl>
-			<p class="cta-register"><a href="/register" title="Register your interest" class="cta-bttn alt"><span>Get your ticket!</span></a></p>
+			<p class="cta-register"><a href="/register" class="cta-bttn alt"><span>Few tickets still available!</span></a></p>
 		</div>
 	</header>
 	
@@ -91,6 +91,14 @@ title: LXJS 2014
 							<a target="_blank" href="{{ sponsor.url }}" title="Visit {{ sponsor.name }}"><img src="img/{{ sponsor.logo }}" alt="{{ sponsor.name }}" width="270" height="150" /></a>
 						</li>
 					{% endfor %}
+				</ul>
+			</section>
+			<section class="student-tickets clearfix">
+				<h1>Student tickets</h1>
+				<ul class="logo-list sponsors">
+					<li class="logo-wrapper">
+						<a target="_blank" href="https://www.meteor.com/" title="Visit Meteor"><img src="img/logo-sponsor-meteor.png" alt="Meteor" width="270" height="150" /></a>
+					</li>
 				</ul>
 			</section>
 			<section class="promise clearfix">
