--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@ title: LXJS 2014
 		
 		<div class="mod-body">
 			{% for speaker in site.speakers %}
-				<a href="{{ speaker.machine_name }}.html" title="Visit {{ speaker.name }} page">
+				<a href="speakers/{{ speaker.machine_name }}.html" title="Visit {{ speaker.name }} page">
 					{{ speaker.name }}
 				</a>
 			{% endfor %}
