--- a/src/fringe/index.html
+++ b/src/fringe/index.html
@@ -70,6 +70,10 @@ title: Fringe • LXJS 2014
 						<p>
 					</li>
 				</ul>
+				
+				<h2>World Cup 2014</h2>
+
+				<p>Yes, same days! Lisbon has endless options for you to watch the games, be it at a small traditional Tasca, or at one of the viewing parties. There's going to be one right next to the main Venue (Parque Eduardo VII). Even if you're not a football fan, it's a unique experience to observe and interact with the enthusiasm it generates in Portugal.</p>
 
 				<h2>Events in Lisbon</h2>
 
