Last Minute tickets

--- a/src/register/index.html
+++ b/src/register/index.html
@@ -72,12 +72,9 @@ title: Register • LXJS 2014
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a>
+								<p class="note">Sold out!</p>
 							</div>
 						</div>
-						<footer class="ticket-foot">
-							<span class="date">April 20<sup>th</sup>, 5pm UTC+1</span>
-						</footer>
 					</article>
 				</li>
 				<li class="ticket-wrapper">
@@ -88,15 +85,15 @@ title: Register • LXJS 2014
 						<div class="ticket-body">
 							<dl class="ticket-data">
 								<dt>Price</dt>
-								<dd class="number">€615</dd>
+								<dd class="number">€480</dd>
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<p class="note"></p>
+								<a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a>
 							</div>
 						</div>
 						<footer class="ticket-foot">
-							<span class="date">TBA</span>
+							<span class="date">On sale</span>
 						</footer>
 					</article>
 				</li>
