Added info about restaurants

--- a/src/fringe/index.html
+++ b/src/fringe/index.html
@@ -28,8 +28,24 @@ title: Fringe • LXJS 2014
 				
 				<h2>Friday: Conference Dinners</h2>
 				<h4>Friday 27<sup>th</sup>, 9pm - 12pm</h4>
-				<p>We want you fit for the second conference day, so we're keeping this event short and simple. LXJS will email all attendees on the 25<sup>th</sup> with links to the available restaurantes and a place to pre-buy your meal. If you want to join, you just have to buy your seat before the 26<sup>th</sup> at 22pm.</p>
+				<p>We want you fit for the second conference day, so we're keeping this event short and simple. LXJS will email all attendees on the 25<sup>th</sup> with links to the available restaurantes and a place to pre-buy your meal. <strong>If you want to join, you just have to buy your seat before the 26<sup>th</sup> at 22pm.</strong></p>
 				<p>For your reference, here's a map with the <a href="https://mapsengine.google.com/map/edit?mid=zy4nPj6KvW7A.kwxMUhmeAJjQ">restaurant locations</a>. Please take into account that these are reserved seats, so only show up if you bought yours.</p>
+				<p><strong><a href="http://www.tripadvisor.com.br/Restaurant_Review-g189158-d3135511-Reviews-Chu_Chu-Lisbon_Estremadura.html" target="_blank">Restaurante Chu-Chu</a></strong> is a grill house. ~15min walking from Venue. 15 Eur per person. Includes: Appetizers (bread, cheese, etc), Beer, Sangria, Stock wine/Vinho da Casa, Sodas, Water, Coffee, Desert. Main course (you'll have to choose in advance, when registering): Grilled Chicken,
+Grilled Black Pork,
+Grilled Picanha/rump cover,
+Grilled Sardines,
+Grilled Dourada/Gilt-head bream,
+Grilled Peixe Espada/Swordfish.</p>
+
+<p><a href="http://www.tripadvisor.com/Restaurant_Review-g189158-d4045832-Reviews-A_Gina-Lisbon_Estremadura.html" target="_blank"><strong>Restaurante A Gina</strong></a> is a grill house. ~20min walking from Venue. 18 Eur per person. Includes: Appetizers (bread, cheese, etc), Beer, Sangria, Stock wine/Vinho da Casa, Sodas, Water, Coffee, Desert. Main course (you'll have to choose in advance, when registering): Fried codfish paste with bean rice + Grilled Sardines, Fried codfish past with bean rice + Mix of Grilled Meat / Grelhada Mista, Poorly improvised vegetarian (they're not good at that).</p>
+
+
+<p><a href="http://www.tripadvisor.co.uk/Restaurant_Review-g189158-d1049991-Reviews-Jardim_dos_Sentidos-Lisbon_Estremadura.html" target="_blank"><strong>Restaurante Jardim dos Sentidos</strong></a> is a  Vegan/Vegetarian place. ~25min walking from Venue. 20 Eur per person. They have <a href="http://www.jardimdosentidos.com/p/5296/men%C3%BAs-de-grupo/" target="_blank">a closed menu</a> where you can choose from some options once you're there. No need to choose the dish in advance.</p>
+
+<p><a href="http://www.tripadvisor.com.br/Restaurant_Review-g189158-d1016236-Reviews-Nood-Lisbon_Estremadura.html" target="_blank"><strong>Restaurante Nood</strong></a> is an Asian food place. ~35min walking from Venue (best take the subway to Baixa/Chiado on the blue line). 20 Eur per person. No need to choose the dish in advance. It includes an appetizer (Small salad or Miso soup). You'll be able to choose from 6 main course options (1 fish, 2 meat and 3 vegetarian): Yaki soba (chicken and shrimp), Teriyaki chicken, Szechuan meat (spicy), Yasai Shitake (rice and mushrooms), Amai Udon (contains peanuts), Coconut and Ginger Curry (with rice). You'll also be entitled to two drinks (beer, water, sodas) and a coffee.</p>
+
+<p><strong>Remember!</strong> you have to buy your seat before the 26<sup>th</sup> 10pm on the link we'll be sending to all attendees. Seats are limited. On two of the restaurants (Chu-Chu and A Gina) make sure you reply the Tito question after registration to choose a dish.</p>
+
 
 				<h2>Saturday: Breathe Lisbon! Farewell Party</h2>
 				<h4>Saturday 28<sup>th</sup>, 9pm onwards</h4>
