Changed talk name

--- a/src/schedule/index.html
+++ b/src/schedule/index.html
@@ -54,7 +54,7 @@ title: Schedule • LXJS 2014
 							<small>10:40 - 11:05</small>
 						</li>
 						<li>
-							<strong>JS and Node?</strong>
+							<strong>Learning happens</strong>
 							<small>11:05 - 11:30</small>
 						</li>
 						<li class="break">
