--- a/src/index.html
+++ b/src/index.html
@@ -17,23 +17,28 @@ title: LXJS 2014
 			<p class="cta-register"><a href="/register" class="cta-bttn alt"><span>Get your Last Minute ticket!</span></a></p>
 		</div>
 	</header>
-	
-	<!-- highlights -->
-	<!-- <div id="highlights">
-		<div class="highlights-body">
-			<div class="highlights-box">		
-				<p class="featured"><strong>Regulars sold out!</strong><br>
-					We're now selling Late Birds, grab them while they last <a href="https://ti.to/lxjs/2014/">over at tito</a>.</p>
-			</div>
-		</div>
-	</div> -->
-	<!--/ highlights -->
 
-	<div id="speakers-overview">			
+
+
+	<div id="stream">	
+		<header class="mod-head">
+			<div class="inner">
+				<h1 class="mod-prime-title">LIVE STREAM!</h1>
+				<p class="mod-description">Both conference mornings are live-streamed here. <a href="schedule">Schedule</a>.</p>
+			</div>
+		</header>
+		
+		<div class="mod-body">
+			<div class="videoWrapper">
+				<iframe width="560" height="315" src="//www.youtube.com/embed/_RJFa_AEHWo" frameborder="0" allowfullscreen></iframe>
+		</div>
+		</div>
+	</div>
+
+	<div id="speakers-overview">	
 		<header class="mod-head">
 			<div class="inner">
 				<h1 class="mod-prime-title">Amazing Speakers and Trainers</h1>
-				<p class="mod-description">These are the ones we already announced. Even more on the way! <a class="cta-inline break" href="speakers">Full list</a></p>
 			</div>
 		</header>
 		
