Stream on top, new tweets

--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,6 @@ title: LXJS 2014
 ---
 <!-- site-body -->
 <section id="site-body" class="mod prime" role="main">
-			
-	<header class="mod-head">
-		<div class="inner">
-			<h1 class="mod-prime-title">JavaScript meets Lisbon</h1>
-			<p class="mod-description">A 2-day not-for-profit by-the-community and for-the-community international conference about the New Worlds of JavaScript.</p>
-			<dl class="event-meta-details">
-				<dt>Event Details</dt>
-				<dd class="location">Lisbon, Portugal</dd>
-				<dd class="date">June 27-28, 2014</dd>
-			</dl>
-			<p class="cta-register"><a href="/register" class="cta-bttn alt"><span>Get your Last Minute ticket!</span></a></p>
-		</div>
-	</header>
-
 
 
 	<div id="stream">	
@@ -34,6 +20,22 @@ title: LXJS 2014
 		</div>
 		</div>
 	</div>
+
+	<header class="mod-head">
+		<div class="inner">
+			<h1 class="mod-prime-title">JavaScript meets Lisbon</h1>
+			<p class="mod-description">A 2-day not-for-profit by-the-community and for-the-community international conference about the New Worlds of JavaScript.</p>
+			<dl class="event-meta-details">
+				<dt>Event Details</dt>
+				<dd class="location">Lisbon, Portugal</dd>
+				<dd class="date">June 27-28, 2014</dd>
+			</dl>
+			<p class="cta-register"><a href="/register" class="cta-bttn alt"><span>Get your Last Minute ticket!</span></a></p>
+		</div>
+	</header>
+
+
+
 
 	<div id="speakers-overview">	
 		<header class="mod-head">
@@ -55,10 +57,10 @@ title: LXJS 2014
 	<div id="tweets">
 		<ul>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p>A sneak peek of what is coming to <a href="https://twitter.com/lxjs">@lxjs</a> <a href="https://t.co/R1Kkt0hiuG">https://t.co/R1Kkt0hiuG</a> <a href="https://twitter.com/nodebots">@nodebots</a></p>&mdash; David Dias (@daviddias) <a href="https://twitter.com/daviddias/statuses/472882052296368128">31 maio 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>whoa. I think <a href="https://twitter.com/lxjs">@lxjs</a> really nailed the venue this year! huge congrats!</p>&mdash; Tiago Rodrigues (@trodrigues) <a href="https://twitter.com/trodrigues/statuses/482446647876919296">June 27, 2014</a></blockquote>
 			</li>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p>just got visa &amp; will deliver talk and work shop on node-webkit at <a href="https://twitter.com/lxjs">@lxjs</a> June 28-29, Portugal</p>&mdash; Roger Wang (@wwr) <a href="https://twitter.com/wwr/statuses/464191963218989056">7 May 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>just did the math: <a href="https://twitter.com/lxjs">@lxjs</a> 2014 will have attendees from 24 different countries!</p>&mdash; Pedro Teixeira (@pgte) <a href="https://twitter.com/pgte/statuses/481736316909260800">June 25, 2014</a></blockquote>
 			</li>
 			<li class="tweet">
 				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/lxjs">@lxjs</a> 2012 changed my life for the better. I&#39;m even more bullish on 2014. Are you attending?</p>&mdash; Charlie Robbins (@indexzero) <a href="https://twitter.com/indexzero/statuses/474788774287646721">6 June 2014</a></blockquote>
@@ -73,7 +75,6 @@ title: LXJS 2014
 		<header class="mod-head">
 			<div class="inner">
 				<h1 class="mod-prime-title">Thanks to our Sponsors</h1>
-				<p class="mod-description">We couldn't make this happen without them. <a class="cta-inline break" href="mailto:hello@lxjs.org" title="Send email">Join the list</a></p>
 			</div>
 		</header>
 		
