--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@ title: LXJS 2014
 		
 		<div class="mod-body">
 			<div class="videoWrapper">
-				<iframe width="560" height="315" src="//www.youtube.com/embed/_RJFa_AEHWo" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="//www.youtube.com/embed/I5pKhaX9xVo" frameborder="0" allowfullscreen></iframe>
 		</div>
 		</div>
 	</div>
@@ -32,9 +32,6 @@ title: LXJS 2014
 			</dl>
 		</div>
 	</header>
-
-
-
 
 	<div id="speakers-overview">	
 		<header class="mod-head">
