--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@ title: LXJS 2014
 		</header>
 		
 		<div class="mod-body">
-			<div class="videoWrapper">
+<!-- 			<div class="videoWrapper">
 				<iframe width="560" height="315" src="//www.youtube.com/embed/I5pKhaX9xVo" frameborder="0" allowfullscreen></iframe>
-		</div>
+			</div> -->
+			<p class="mod-description">Recordings of Fridays talks are already up <a href="https://www.youtube.com/user/lxjs2012/videos">over at YouTube</a>! Live Stream will be back Saturday Morning 9:30am GMT+1 (Lisbon time).</p>
 		</div>
 	</div>
 
