Removed stream. Removed tickets

--- a/src/register/index.html
+++ b/src/register/index.html
@@ -89,12 +89,9 @@ title: Register • LXJS 2014
 								<dd class="subtitle">+ 23% VAT and Fee</dd>
 							</dl>
 							<div class="ticket-body">
-								<a href="https://ti.to/lxjs/2014/" class="cta-bttn">Buy now!</a>
+								<p class="note">Sold out!</p>
 							</div>
 						</div>
-						<footer class="ticket-foot">
-							<span class="date">On sale</span>
-						</footer>
 					</article>
 				</li>
 			</ul>
