First post-event home

--- a/src/index.html
+++ b/src/index.html
@@ -5,23 +5,6 @@ title: LXJS 2014
 <!-- site-body -->
 <section id="site-body" class="mod prime" role="main">
 
-
-	<div id="stream">	
-		<header class="mod-head">
-			<div class="inner">
-				<h1 class="mod-prime-title">LIVE STREAM!</h1>
-				<p class="mod-description">Both conference mornings are live-streamed here. <a href="schedule">Schedule</a>.</p>
-			</div>
-		</header>
-		
-		<div class="mod-body">
-<!-- 			<div class="videoWrapper">
-				<iframe width="560" height="315" src="//www.youtube.com/embed/I5pKhaX9xVo" frameborder="0" allowfullscreen></iframe>
-			</div> -->
-			<p class="mod-description">Recordings of Fridays talks are already up <a href="https://www.youtube.com/user/lxjs2012/videos">over at YouTube</a>! Live Stream will be back Saturday Morning 9:30am GMT+1 (Lisbon time).</p>
-		</div>
-	</div>
-
 	<header class="mod-head">
 		<div class="inner">
 			<h1 class="mod-prime-title">JavaScript meets Lisbon</h1>
@@ -34,33 +17,26 @@ title: LXJS 2014
 		</div>
 	</header>
 
-	<div id="speakers-overview">	
+	<div id="update">	
 		<header class="mod-head">
 			<div class="inner">
-				<h1 class="mod-prime-title">Amazing Speakers and Trainers</h1>
+				<h1 class="mod-prime-title">THANK YOU!</h1>
+				<p class="mod-description"><strong>What a blast.</strong> Talks are already <a href="https://www.youtube.com/user/lxjs2012/videos">available on YouTube</a>. Photos and Interviews coming up soon. Missed the 2014 edition? <a href="#site-foot">Sign up for news</a> about future events.</p>
 			</div>
 		</header>
-		
-		<div class="mod-body">
-			{% for speaker in site.speakers %}
-				<a href="speakers/{{ speaker.machine_name }}.html" title="Visit {{ speaker.name }} page">
-					{{ speaker.name }}
-				</a>
-			{% endfor %}
-		</div>
 	</div>
 
 	<!-- tweets -->
 	<div id="tweets">
 		<ul>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p>whoa. I think <a href="https://twitter.com/lxjs">@lxjs</a> really nailed the venue this year! huge congrats!</p>&mdash; Tiago Rodrigues (@trodrigues) <a href="https://twitter.com/trodrigues/statuses/482446647876919296">June 27, 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>1st time was awesome, 2nd time was fantastic, 3rd time was a charm. Thank you <a href="https://twitter.com/lxjs">@lxjs</a> for 3 years of lovely &amp; friendly conferencing &lt;3</p>&mdash; Sebastian !p\! Belle (@asciidisco) <a href="https://twitter.com/asciidisco/statuses/483195728429211648">June 29, 2014</a></blockquote>
 			</li>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p>just did the math: <a href="https://twitter.com/lxjs">@lxjs</a> 2014 will have attendees from 24 different countries!</p>&mdash; Pedro Teixeira (@pgte) <a href="https://twitter.com/pgte/statuses/481736316909260800">June 25, 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>Farewell <a href="https://twitter.com/hashtag/lxjs?src=hash">#lxjs</a>. See you next year. Totally awesome. <a href="http://t.co/BYvQnnZMja">pic.twitter.com/BYvQnnZMja</a></p>&mdash; Patrick Heneise (@PatrickHeneise) <a href="https://twitter.com/PatrickHeneise/statuses/483070142365302784">June 29, 2014</a></blockquote>
 			</li>
 			<li class="tweet">
-				<blockquote class="twitter-tweet" lang="en"><p><a href="https://twitter.com/lxjs">@lxjs</a> 2012 changed my life for the better. I&#39;m even more bullish on 2014. Are you attending?</p>&mdash; Charlie Robbins (@indexzero) <a href="https://twitter.com/indexzero/statuses/474788774287646721">6 June 2014</a></blockquote>
+				<blockquote class="twitter-tweet" lang="en"><p>Will be leaving <a href="https://twitter.com/lxjs">@lxjs</a> inspired and full of excitement for new things. Exactly what I needed.</p>&mdash; Tom λshworth (@phuunet) <a href="https://twitter.com/phuunet/statuses/483075080407490561">June 29, 2014</a></blockquote>
 			</li>
 		</ul>
 	</div>
