Added link to photos, new link to videos

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@ title: LXJS 2014
 		<header class="mod-head">
 			<div class="inner">
 				<h1 class="mod-prime-title">THANK YOU!</h1>
-				<p class="mod-description"><strong>What a blast.</strong> Talks are already <a href="https://www.youtube.com/user/lxjs2012/videos">available on YouTube</a>. Photos and Interviews coming up soon. Missed the 2014 edition? <a href="#site-foot">Sign up for news</a> about future events.</p>
+				<p class="mod-description"><strong>What a blast.</strong> Talks and Interviews are already <a href="https://www.youtube.com/playlist?list=PLt4dwg5cC5TRpoSVH5Rs6-bIIUNIYTy9-">available on YouTube</a>. Photos <a hrev="https://www.dropbox.com/sh/hgajjq4e439c8jq/AADnPm4kM8bkxftK1tMWuR_4a/2014?dl=0">over here</a>. Missed the 2014 edition? <a href="#site-foot">Sign up for news</a> about future events.</p>
 			</div>
 		</header>
 	</div>
