--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,9 @@ title: LXJS 2014
 	<div id="update">	
 		<header class="mod-head">
 			<div class="inner">
-				<h1 class="mod-prime-title">THANK YOU!</h1>
-				<p class="mod-description"><strong>What a blast.</strong> Talks and Interviews are already <a href="https://www.youtube.com/playlist?list=PLt4dwg5cC5TRpoSVH5Rs6-bIIUNIYTy9-">available on YouTube</a>. Photos <a href="https://www.dropbox.com/sh/hgajjq4e439c8jq/AADnPm4kM8bkxftK1tMWuR_4a/2014?dl=0">over here</a>. Missed the 2014 edition? <a href="#site-foot">Sign up for news</a> about future events.</p>
+				<h1 class="mod-prime-title">2015 break</h1>
+				<p class="mod-description">After three memorable editions in a row, we have decided to take a break in 2015. <a href="http://lxjs.tumblr.com/">Read more about this here</a>.</p>
+				<p class="mod-description"><strong>2014 was a blast</strong>. Talks and Interviews are already <a href="https://www.youtube.com/playlist?list=PLt4dwg5cC5TRpoSVH5Rs6-bIIUNIYTy9-">available on YouTube</a>. Photos <a href="https://www.dropbox.com/sh/hgajjq4e439c8jq/AADnPm4kM8bkxftK1tMWuR_4a/2014?dl=0">over here</a>. Missed the 2014 edition? <a href="#site-foot">Sign up for news</a> about future events.</p>
 			</div>
 		</header>
 	</div>
